# A6-Gas-demand-response

./: LICENSE  README.md  config.yml  pyproject.toml
src/assets/: dev.json
src/backend/: bootstrap.sh  main.py
src/backend/action_coordination_algorithm/: ActionDispatcher.py  action_coordinator.py  helper.py  pi_controller.py
src/backend/action_coordination_algorithm/model/: A_Function.py  State.py
src/backend/business_as_usual_controller/: BusinessAsUsualController.py
src/backend/codelist/: boilerObelisk.py  domxObelisk.py
src/backend/controller/: domxController.py  storageacces.py
src/backend/mapper/: boilerMapper.py  domxMapper.py
src/backend/model/: DR_Event.py  action.py  action_coordinator_var.py  environment.py  eventypes.py  filetype.py
src/backend/model/requests/: datagroupedRequest.py  devicedataRequest.py  obeliskRequest.py  signinRequest.py
src/backend/model/responses/: boiler.py  devicedataRespone.py  domx.py  error.py  obeliskResponse.py  obelisk_auth.py  siginResponse.py
src/backend/service/: action_service.py  domxService.py  housesservice.py  obelisk_customer.py
src/misc/: logger.py  loki_logger.py
src/misc/codelist/: level.py  origin.py  type.py
